# scrobbles

./: .gitignore  CNAME  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/actions/setup-python/: action.yml
.github/workflows/: analyze.yml  ci.yml
code/: scrobble_analysis.py
code/helpers/: analysis.py  api.py  reporting.py
config/: requirements-dev.txt
docs/: _config.yml  index.md
python/: scrobble_analysis.py
python/helpers/: __init__.py  analysis.py  api.py  cache.py  config.py  reporting.py  visualization.py
src/scrobble_analysis/: __init__.py  __main__.py  api.py  cli.py  config.py  reporting.py  visualization.py
tests/: __init__.py  conftest.py  test_analysis.py  test_api.py  test_cache.py  test_cli.py  test_reporting.py  test_visualization.py
