# Project configuration
# Contains settings for development tools and package metadata

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "scrobble-analysis"
version = "1.0.0"
description = "Last.fm scrobble analysis tool"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    "bandit>=1.7.0",
]

[project.scripts]
scrobble-analysis = "scrobble_analysis.cli:main"

# ------------------------------------------------------------------------------
# Ruff Configuration (Linter & Formatter)
# https://docs.astral.sh/ruff/configuration/
# ------------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "SIM108", # ternary operator suggestion
]

[tool.ruff.lint.isort]
known-first-party = ["scrobble_analysis"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ------------------------------------------------------------------------------
# Mypy Configuration (Type Checker)
# https://mypy.readthedocs.io/en/stable/config_file.html
# ------------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ------------------------------------------------------------------------------
# Bandit Configuration (Security Scanner)
# https://bandit.readthedocs.io/en/latest/config.html
# ------------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert warnings
